welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:40: error: not found: value setBrosseColor
		setBrosseColor(T(c))
                ^